Ctrl + F will now focus the search bar Added hover, focus & active styles to the dialog close button "File Key" label will no longer break into multiple lines Implemented Access Keys for the navigation menu on desktop Began implementing Access Keys for the navigation men in browser

--- a/src/sass/_dialog.scss
+++ b/src/sass/_dialog.scss
@@ -47,6 +47,16 @@
         text-align: center;
 
         cursor: pointer;
+        outline: none;
+
+        &:hover,
+        &:focus {
+            background: lighten($panel-tab-background-color, 3);
+        }
+
+        &:active {
+            padding-top: 1px;
+        }
     }
 
     main {
