--- a/src/sass/_menu.scss
+++ b/src/sass/_menu.scss
@@ -35,6 +35,10 @@ $menu-popup-separator-margin:   5px 0;
         display: none;
         position: absolute;
     }
+
+    &.menu-navigating .menu-access-key {
+        text-decoration: underline;
+    }
 }
 
 .menu-item {
@@ -50,7 +54,8 @@ $menu-popup-separator-margin:   5px 0;
         cursor: default;
     }
 
-    &:not(.disabled):hover {
+    &:not(.disabled):hover,
+    &:not(.disabled).active-menu {
         background: $menu-background-color-hover;
         box-shadow: 0 0 0 rgba($menu-background-color-hover, .75);
         color: $menu-color-hover;
@@ -127,7 +132,8 @@ $menu-popup-separator-margin:   5px 0;
         > .menu-item {
             float: left;
 
-            &:hover {
+            &:hover,
+            &.active-menu {
                 $color: rgba(0, 0, 0, .5);
                 box-shadow: inset  0 1px 0 $color,
                             inset  1px 0 0 $color,
