--- a/src/sass/_ui.scss
+++ b/src/sass/_ui.scss
@@ -207,6 +207,9 @@
     select {
         width: 100%;
     }
+    label {
+        white-space: nowrap;
+    }
 }
 
 .search-bar {
